# gzkit

./: .copilotignore  .gitignore  .gitleaksignore  .gzkit.json  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  RELEASE_NOTES.md  agents.local.md  gz.spec  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml  temp_obpi.md  ty.toml
.agents/: verifier.md
.claude/: AGENTS.md  settings.json  settings.local.example.json  settings.local.json
.github/: AGENTS.md  copilot-instructions.md  discovery-index.json
.gzkit/: README.md  gzkit-companion-adr-prompt.md  ledger.jsonl  manifest.json
AGENTS/: index.html
agents/: git-sync-repo.md
config/: AGENTS.md  doc-coverage.json  eval_thresholds.json  gzkit.chores.json
data/: flags.json
docs/: AGENTS.md  GovZero_gzkit_revision_1.md  README.md  charter.md  genesis.md  lineage.md
examples/: index.html
features/: AGENTS.md  arb.feature  check_drift_advisory.feature  closeout_ceremony.feature  closeout_product_proof.feature  environment.py  frontmatter_reconcile.feature  gates.feature  heavy_lane_gate4.feature  obpi_anchor_drift.feature  obpi_complete.feature  obpi_lock.feature  patch_release.feature  persona.feature  persona_sync.feature  reporter_rendering.feature  reviewer_agent.feature  state_repair.feature  subagent_pipeline.feature  task_governance.feature  test_traceability.feature  triangle_drift.feature
outputs/: ai-governance-brief.md  ai-governance-research-gaps.md  ai-governance-research-practice.md  ai-governance-verification.md
scripts/: backfill_req_ids.py
search/: search_index.json
(+2903 files in other folders)
