[project]
name = "gzkit"
version = "0.1.0"
description = "GovZero Kit: A Development Covenant for Human-AI Collaboration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Jeffry Babb" }
]
keywords = ["governance", "adr", "specification", "ai", "collaboration", "covenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
gz = "gzkit.cli:main"

[project.urls]
Homepage = "https://gzkit.org"
Documentation = "https://gzkit.org"
Repository = "https://github.com/tvproductions/gzkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gzkit"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
